--- a/MelbourneModernApps.BlazorWasm/_Imports.razor
+++ b/MelbourneModernApps.BlazorWasm/_Imports.razor
@@ -7,3 +7,4 @@
 @using MelbourneModernApps.BlazorWasm.Shared
 @using MelbourneModernApp.Core.ViewModels
 @using MatBlazor
+@using MelbourneModernApps.BlazorWasm.Components
