Playing around with new XF

--- a/MelbourneModernApps.BlazorWasm/Pages/PresentersPage.razor
+++ b/MelbourneModernApps.BlazorWasm/Pages/PresentersPage.razor
@@ -34,7 +34,7 @@ else
                     <td>@presenter.Name</td>
                     <td>@presenter.Description</td>
                     <td>@presenter.TwitterHandle</td>
-                    <td><MatIconButton Icon="edit" OnClick="@(() => VM. OpenPresenter(presenter))"></MatIconButton></td>
+                    <td><MatIconButton Icon="@MatIconNames.Accessibility" OnClick="@(() => VM. OpenPresenter(presenter))"></MatIconButton></td>
                 </tr>
             }
         </tbody>
