--- a/MelbourneModernApps/Controls/CardLayout.xaml
+++ b/MelbourneModernApps/Controls/CardLayout.xaml
@@ -6,52 +6,85 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="MelbourneModernApps.Controls.CardLayout"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
-    <Grid
-        Padding="0"
-        Margin="0">
-        <Grid.RowDefinitions>
-            <RowDefinition
-                Height="Auto" />
-            <RowDefinition
-                Height="*" />
-            <RowDefinition
-                Height="Auto" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition
-                Width="Auto" />
-            <ColumnDefinition
-                Width="*" />
-        </Grid.ColumnDefinitions>
-        <Frame
-            Visual="Material"
-            Padding="0"
-            Margin="0"
-            VerticalOptions="Start"
-            Grid.RowSpan="3"
-            WidthRequest="100"
-            HeightRequest="100"
-            CornerRadius="50">
-            <Image
-                Source="{Binding ImageUrl}" />
-        </Frame>
-        <Label
-            Grid.Column="1"
-            Text="{Binding Name}"
-            LineBreakMode="NoWrap"
-            Style="{DynamicResource ListItemTextStyle}"
-            FontSize="16" />
-        <Label
-            Grid.Column="1"
-            Grid.Row="1"
-            Text="{Binding Description}"
-            LineBreakMode="NoWrap"
-            Style="{DynamicResource ListItemDetailTextStyle}"
-            FontSize="13" />
-        <Label
-            Grid.Row="2"
-            Grid.Column="1"
-            Text="{Binding TwitterHandle}" />
-        
-    </Grid>
+    <Expander>
+        <Expander.Header>
+
+            <Grid
+                Padding="0"
+                Margin="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition
+                        Height="Auto" />
+                    <RowDefinition
+                        Height="*" />
+                    <RowDefinition
+                        Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition
+                        Width="Auto" />
+                    <ColumnDefinition
+                        Width="*" />
+                </Grid.ColumnDefinitions>
+                <Frame
+                    Visual="Material"
+                    Padding="0"
+                    Margin="0"
+                    VerticalOptions="Start"
+                    Grid.RowSpan="3"
+                    WidthRequest="100"
+                    HeightRequest="100"
+                    CornerRadius="50">
+                    <Image
+                        x:Name="CircleImage"
+                        Source="{Binding ImageUrl}" />
+                </Frame>
+                <Label
+                    Grid.Column="1"
+                    x:Name="TitleLabel"
+                    LineBreakMode="NoWrap"
+                    Style="{DynamicResource ListItemTextStyle}"
+                    FontSize="16" />
+                <Label
+                    Grid.Column="1"
+                    Grid.Row="1"
+                    Text="{Binding Description}"
+                    LineBreakMode="NoWrap"
+                    Style="{DynamicResource ListItemDetailTextStyle}"
+                    FontSize="13" />
+                <Label
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Text="{Binding TwitterHandle}" />
+
+            </Grid>
+        </Expander.Header>
+        <Expander.ContentTemplate>
+            <DataTemplate>
+
+                <Grid
+                    HeightRequest="150">
+                    <Grid.RowDefinitions>
+                        <RowDefinition
+                            Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition
+                            Width="*" />
+                        <ColumnDefinition
+                            Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <MediaElement
+                        Grid.RowSpan="2"
+                        ShowsPlaybackControls="True"
+                        Source="https://sec.ch9.ms/ch9/5a1c/b70989c3-7875-45e5-9181-13523b845a1c/ColorConverters_mid.mp4" />
+                    <Label
+                        Grid.Column="1"
+                        Text="{Binding RepoUrl}" />
+                </Grid>
+            </DataTemplate>
+
+        </Expander.ContentTemplate>
+    </Expander>
+
 </Frame>
