--- a/MelbourneModernApps/Views/PresentersPage.xaml
+++ b/MelbourneModernApps/Views/PresentersPage.xaml
@@ -31,6 +31,8 @@
                 <DataTemplate>
                     <Grid>
                         <controls:CardLayout
+                            Title="{Binding Name}"
+                            ImageUrl="{Binding ImageUrl}"
                             Clicked="OnItemSelected" />
                         <Grid.GestureRecognizers>
                             <TapGestureRecognizer
