Added Mobile Blazor Binding Client

--- a/MelbourneModernApps.BlazorWasm/Pages/PresenterDetailPage.razor
+++ b/MelbourneModernApps.BlazorWasm/Pages/PresenterDetailPage.razor
@@ -1,5 +1,6 @@
 ﻿@page "/presenters/detail"
 @page "/presenters/detail/{Id}"
+@page "/presenters/{Id}"
 @inject NavigationManager NavigationManager
 
 <h1>New Presenter</h1>
