--- a/MelbourneBlazorXamarin.Forms/MBBAppShell.razor
+++ b/MelbourneBlazorXamarin.Forms/MBBAppShell.razor
@@ -2,10 +2,17 @@
 
 <Shell FlyoutBehavior="FlyoutBehavior.Disabled">
     <TabBar>
-        <Tab>
+        <Tab Title="Presenters">
             <ShellContent>
                 <MBBPresentersPage />
             </ShellContent>
+        </Tab>
+        <Tab Title="About">
+            <ContentPage>
+                <StackLayout>
+                    <Label Text="About"></Label>
+                </StackLayout>
+            </ContentPage>
         </Tab>
     </TabBar>
 </Shell>
